--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@adonisjs/core": "^5.1.0",
     "@adonisjs/lucid": "^15.0.2",
     "@adonisjs/repl": "^3.0.0",
+    "@adonisjs/session": "^6.1.0",
     "luxon": "^1.27.0",
     "mssql": "^7.1.3",
     "phc-argon2": "^1.1.1",
